--- a/demos/main/build.gradle
+++ b/demos/main/build.gradle
@@ -51,12 +51,6 @@ android {
     }
 }
 
-ext {
-    rxJavaVersion = '2.1.0'
-    rxAndroidVersion = '2.0.1'
-
-}
-
 dependencies {
 
 
@@ -65,20 +59,14 @@ dependencies {
     compile project(modulePrefix + 'library-hls')
     compile project(modulePrefix + 'library-smoothstreaming')
     compile project(modulePrefix + 'library-ui')
+    compile project(modulePrefix + 'library-offline')
+
     withExtensionsCompile project(path: modulePrefix + 'extension-ffmpeg')
     withExtensionsCompile project(path: modulePrefix + 'extension-flac')
     withExtensionsCompile project(path: modulePrefix + 'extension-ima')
     withExtensionsCompile project(path: modulePrefix + 'extension-opus')
     withExtensionsCompile project(path: modulePrefix + 'extension-vp9')
     withExtensionsCompile project(path: modulePrefix + 'extension-rtmp')
-
-    testCompile 'junit:junit:' + junitVersion
-    testCompile 'org.mockito:mockito-core:' + mockitoVersion
-    testCompile 'org.robolectric:robolectric:' + robolectricVersion
-
-    // RxJava
-    compile "io.reactivex.rxjava2:rxjava:$rxJavaVersion"
-    compile "io.reactivex.rxjava2:rxandroid:$rxAndroidVersion"
 
     testCompile 'junit:junit:4.12'
 }
