--- a/javadoc_library.gradle
+++ b/javadoc_library.gradle
@@ -12,29 +12,29 @@
 // See the License for the specific language governing permissions and
 // limitations under the License.
 android.libraryVariants.all { variant ->
-    def name = variant.buildType.name
-    if (!name.equals("release")) {
-        return; // Skip non-release builds.
-    }
-    task("generateJavadoc", type: Javadoc) {
-        description = "Generates Javadoc for the ${javadocTitle}."
-        title = "ExoPlayer ${javadocTitle}"
-        source = variant.javaCompile.source
-        classpath = files(variant.javaCompile.classpath.files,
-	                  project.android.getBootClasspath())
-        options {
-            links "http://docs.oracle.com/javase/7/docs/api/"
-            linksOffline "https://developer.android.com/reference",
-                         "${android.sdkDirectory}/docs/reference"
-            encoding = "UTF-8"
-        }
-        exclude "**/BuildConfig.java"
-        exclude "**/R.java"
-        doLast {
-            copy {
-                from "src/main/javadoc"
-                into "$buildDir/docs/javadoc"
-            }
-        }
-    }
+//    def name = variant.buildType.name
+//    if (!name.equals("release") && isJavaDocNeeded) {
+//        return; // Skip non-release builds.
+//    }
+//    task("generateJavadoc", type: Javadoc) {
+//        description = "Generates Javadoc for the ${javadocTitle}."
+//        title = "ExoPlayer ${javadocTitle}"
+//        source = variant.javaCompile.source
+//        classpath = files(variant.javaCompile.classpath.files,
+//	                  project.android.getBootClasspath())
+//        options {
+//            links "http://docs.oracle.com/javase/7/docs/api/"
+//            linksOffline "https://developer.android.com/reference",
+//                         "${android.sdkDirectory}/docs/reference"
+//            encoding = "UTF-8"
+//        }
+//        exclude "**/BuildConfig.java"
+//        exclude "**/R.java"
+//        doLast {
+//            copy {
+//                from "src/main/javadoc"
+//                into "$buildDir/docs/javadoc"
+//            }
+//        }
+//    }
 }
